--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
 click==8.0.3
 Flask==2.0.3
 Flask-JWT-Extended==4.3.1
-importlib-metadata==4.11.1
-itsdangerous==2.0.1
+Flask-SQLAlchemy==2.5.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
-PyJWT==2.3.0
-typing_extensions==4.1.1
 Werkzeug==2.0.3
 zipp==3.7.0
