--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,24 @@
+alembic==1.7.6
+certifi==2021.10.8
 click==8.0.3
+colorama==0.4.4
 Flask==2.0.3
 Flask-JWT-Extended==4.3.1
+Flask-Migrate==2.1.1
+Flask-Script==2.0.5
 Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+importlib-metadata==4.11.1
+importlib-resources==5.4.0
+itsdangerous==2.1.0
 Jinja2==3.0.3
+Mako==1.1.6
 MarkupSafe==2.0.1
+PyJWT==2.3.0
+six==1.16.0
+SQLAlchemy==1.4.31
+SQLAlchemy-Utils==0.38.2
+typing_extensions==4.1.1
 Werkzeug==2.0.3
+wincertstore==0.2
 zipp==3.7.0
