--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,48 @@
-alembic==1.7.6
-certifi==2021.10.8
-click==8.0.3
-colorama==0.4.4
-Flask==2.0.3
-Flask-JWT-Extended==4.3.1
-Flask-Migrate==2.1.1
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.2
-importlib-metadata==4.11.1
-importlib-resources==5.4.0
-itsdangerous==2.1.0
-Jinja2==3.0.3
-Mako==1.1.6
-MarkupSafe==2.0.1
-PyJWT==2.3.0
-six==1.16.0
-SQLAlchemy==1.4.31
-SQLAlchemy-Utils==0.38.2
-typing_extensions==4.1.1
-Werkzeug==2.0.3
-wincertstore==0.2
-zipp==3.7.0
-marshmallow==3.14.1
-cryptography==3.4.8
-pymysql==1.0.2
-python-dateutil==2.8.2
-pycryptodome==3.14.1
-celery==5.2.3
+alembic==1.8.1
+amqp==5.1.1
+billiard==3.6.4.0
+cached-property==1.5.2
+celery==5.2.7
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+Flask==2.2.2
+Flask-JWT-Extended==4.4.4
+Flask-Migrate==3.1.0
 flask-sample-test==0.0.5
-python-dotenv==0.20.0
-oss2==2.16.0
+Flask-Script==2.0.6
+Flask-SQLAlchemy==3.0.2
+greenlet==1.1.3.post0
+idna==3.4
+importlib-metadata==5.0.0
+importlib-resources==5.10.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kombu==5.2.4
+Mako==1.2.3
+MarkupSafe==2.1.1
+marshmallow==3.18.0
+packaging==21.3
+prompt-toolkit==3.0.31
+pycparser==2.21
+pycryptodome==3.15.0
+PyJWT==2.6.0
+PyMySQL==1.0.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+pytz==2022.5
 requests==2.28.1
+six==1.16.0
+SQLAlchemy==1.4.42
+SQLAlchemy-Utils==0.38.3
+typing_extensions==4.4.0
+urllib3==1.26.12
+vine==5.0.0
+wcwidth==0.2.5
+Werkzeug==2.2.2
+zipp==3.10.0
